# pyptv2

./: .gitignore  CLAUDE.md  README.md  README.update.md  bump_version.py  install.sh  pixi.toml  pull_request.md  pyproject.toml  setup.py  setup_optv.py  test_bridge.py  test_import.py  test_ptv_core.py  test_ui.py
build_scripts/: build_step_by_step.sh  fix_all_numpy_types.sh  fix_numpy_types.sh  fix_segmentation.sh  install_test_optv.sh  minimal_setup.sh  pixi_test_import.sh  simplified_build.sh  test_install_local.sh  test_install_pypi.sh  test_optv_install.sh
pyptv2/: __init__.py  __main__.py  cli.py
pyptv2/openptv/: __init__.py  setup.py
pyptv2/openptv/liboptv/include/optv/: calibration.h  ray_tracing.h
pyptv2/openptv/liboptv/src/: calibration.c
pyptv2/openptv/optv/: __init__.py  calibration.pyx  parameters.pyx  segmentation.pyx  transforms.pxd  transforms.pyx  vec_utils.pxd
pyptv2/openptv/test/: test_all_modules.py  test_import.py  test_minimal.py  test_setup.py  test_setup_calibration.py  test_setup_correspondences.py  test_setup_epipolar.py  test_setup_image_processing.py  test_setup_imgcoord.py  test_setup_lsqadj.py  test_setup_orientation.py  test_setup_parameters.py  test_setup_segmentation.py  test_setup_tracker.py  test_setup_tracking_framebuf.py  test_setup_transforms.py  test_setup_vec_utils.py
pyptv2/ui/: __init__.py  app.py  camera_view.py  main_window.py  parameter_dialog.py  parameter_sidebar.py
pyptv2/ui/dialogs/: __init__.py
pyptv2/ui/ptv_core/: __init__.py  bridge.py
tests/: __init__.py  test_cli.py
