[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["pyptv2"]

[project]
name = "pyptv2"
version = "0.1.0"
description = "Modern Python GUI for OpenPTV"
authors = [
    { name = "Alex Liberzon", email = "alex.liberzon@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
keywords = ["pyptv", "openptv", "particle tracking velocimetry"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "PySide6>=6.4.0",
    "scikit-image",
    "Pygments",
    "imagecodecs",
    "pandas",
    "tqdm",
    "matplotlib>=3.5.0",
    "scipy",
    "numpy>=1.20.0",
    "pyyaml>=6.0"
]

[project.urls]
"Homepage" = "https://github.com/alexlib/pyptv2"

[project.scripts]
pyptv2 = "pyptv2.__main__:main"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'